--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,5 +1,6 @@
 eclipse.preferences.version=1
 encoding//src/main/java=UTF-8
+encoding//src/main/resources=UTF-8
 encoding//src/test/java=UTF-8
 encoding//webapp/WEB-INF/views/admin/faq.jsp=utf-8
 encoding//webapp/WEB-INF/views/admin/faq_edit.jsp=utf-8
