--- a/pom.xml
+++ b/pom.xml
@@ -150,7 +150,7 @@
 				<artifactId>tomcat-maven-plugin</artifactId>
 				<configuration>
 					<url>http://127.0.0.1:8080/manager/text</url>
-					<path>/mysite3</path>
+					<path>/bitmall</path>
 					<username>admin</username>
 					<password>manager</password>
 				</configuration>
